fix(Button): extend button to support collapsable button types

--- a/src/demo/src/styles.scss
+++ b/src/demo/src/styles.scss
@@ -13,6 +13,7 @@ hr {
 }
 
 
+$log: $ts-material-warn;
 
 $ts-default-primary: mat-palette($ts-material-primary, 500, 100, 700);
 $ts-default-accent:  mat-palette($ts-material-accent, 500, 100, 700);
